feat: created controller, added config, 2 base get endpoints