@@ -1,7 +1,8 @@
 package by.vanzoneway.hotelapp.exception;
 
-import by.vanzoneway.hotelapp.constants.AppConstants;
+import by.vanzoneway.hotelapp.constants.ApplicationConstants;
 import by.vanzoneway.hotelapp.exception.dto.ApiExceptionDto;
+import by.vanzoneway.hotelapp.exception.hotel.HotelNotFoundException;
 import by.vanzoneway.hotelapp.exception.violation.ValidationErrorResponse;
 import by.vanzoneway.hotelapp.exception.violation.Violation;
 import jakarta.validation.ConstraintViolationException;
@@ -14,25 +15,33 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
 public class GlobalExceptionHandler {
 
+    @ExceptionHandler(HotelNotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ApiExceptionDto handle404(final Exception e) {
+        return new ApiExceptionDto(
+                HttpStatus.NOT_FOUND,
+                e.getMessage(),
+                LocalDateTime.now());
+    }
+
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ApiExceptionDto handleAnyException(Exception e) {
+    public ApiExceptionDto handle500(final Exception e) {
         log.error(e.getMessage(), e);
         return new ApiExceptionDto(
                 HttpStatus.INTERNAL_SERVER_ERROR,
-                AppConstants.INTERNAL_SERVER_ERROR,
+                ApplicationConstants.INTERNAL_SERVER_ERROR,
                 LocalDateTime.now());
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse handleConstraintValidationException(ConstraintViolationException e) {
+    public ValidationErrorResponse handleConstraintValidationException(final ConstraintViolationException e) {
         final List<Violation> violations = e.getConstraintViolations().stream()
                 .map(
                         violation -> new Violation(
@@ -40,16 +49,16 @@ public class GlobalExceptionHandler {
                                 violation.getMessage()
                         )
                 )
-                .collect(Collectors.toList());
+                .toList();
         return new ValidationErrorResponse(violations);
     }
 
     @ExceptionHandler({MethodArgumentNotValidException.class})
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
+    public ValidationErrorResponse handleMethodArgumentNotValidException(final MethodArgumentNotValidException e) {
         final List<Violation> violations = e.getBindingResult().getFieldErrors().stream()
                 .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
-                .collect(Collectors.toList());
+                .toList();
         return new ValidationErrorResponse(violations);
     }
 
